# taskhub-mcp

./: .gitignore  .mcp.json  CLAUDE.md  MANIFEST.in  README.md  api.py  base.md  db_viewer.py  example_task_script.sh  main.py  markdown_sync.py  mcp_config.json  models.py  pyproject.toml  requirements.txt  start_server.sh  test_api.py  test_markdown_sync.py  test_sse.html  test_sse.py
.devcontainer/: Dockerfile  devcontainer.json
api/: dependencies.py
api/routers/: help.py  tasks.py
api/services/: help_builder.py
docs/: WORKER_PROMPT.md  api-reference.md  architecture.md  development.md  mcp-best-practices.md  project-concept.md  setup.md  sse-events.md  sse-implementation-guide.md  sse-mcp-integration.md  usage.md  worker-architecture.md
scripts/: spawn-decision-worker.sh  spawn-execution-worker.sh
taskhub_mcp/: __init__.py  cli.py  config.py  event_broadcaster.py  main.py  markdown_sync.py  models.py  task_executor.py
taskhub_mcp/api/: dependencies.py  main.py
taskhub_mcp/api/routers/: events.py  execution.py  help.py  tasks.py
taskhub_mcp/api/services/: help_builder.py
tasks/: enhance_parameter_validation.md  example_task.md  implement_help_system.md  implement_mcp_tools_exposure.md  implement_task_execution_environment_integration.md  implement_user_authentication.md  manager_sseイベントリスナーの実装.md  optimize_api_for_ai_agents.md  refactor_api_py.md  setup_claude_code_integration.md  standardize_error_responses.md  update_project_documentation.md
tasks/devcontainer/: improve_devcontainer_venv_setup.md
tasks/development/: setup_devcontainer_with_taskhub_and_nodejs.md
tasks/documentation/: rewrite_readmemd_with_natural_language.md
tasks/tasks/: enhance_git_integration.md  implement_task_execution_environment_integration.md  optimize_api_for_ai_agents.md  update_project_documentation.md
