[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskhub-mcp"
version = "0.1.0"
description = "Git-native task management system with MCP integration for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TaskHub MCP Contributors"}
]
keywords = ["task-management", "mcp", "ai-agents", "claude", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Private :: Do Not Upload",
]

dependencies = [
    "fastapi==0.115.13",
    "uvicorn[standard]==0.34.3",
    "fastapi-mcp==0.3.4",
    "tinydb==4.8.2",
    "python-frontmatter==1.1.0",
]

[project.urls]
Repository = "https://github.com/sk-box/taskhub-mcp"
"Bug Reports" = "https://github.com/sk-box/taskhub-mcp/issues"

[project.scripts]
taskhub-mcp = "taskhub_mcp.cli:main"
taskhub-server = "taskhub_mcp.main:run_server"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["taskhub_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/taskhub_mcp",
    "/README.md",
    "/LICENSE",
    "/CLAUDE.md",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=taskhub_mcp --cov-report=term-missing"